--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -5,6 +5,7 @@
   <title>URL Shortener Demo{% if block('title') %} — {{ block('title') }}{% endif %}</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
 {% if assets.bundle.css is defined %}
   <link href="{{ assets.bundle.css }}" rel="stylesheet" />
 {% endif %}
